# celegans

./: README.md  README_lineage.md  build_initial_lineage.py  build_lineage.py  dummy_update_1.py  hypergraph_dash_app.py  lineage_cli.py  lineage_dash_app.py  lineage_dash_app_full_export.py  lineage_dash_app_with_expression.py  lineage_hypergraph.py  lineage_visualizer.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  simulate_peptide_membrane.py  synctial_lineage_dataset_builder.py  syncytial_lineage_min.csv  syncytial_lineage_min.json  syntactical_lineages.txt  visualize_lineage_tree.py
