# setup.cfg

[metadata]
name = celegans_lineage
version = 0.1.0
description = C. elegans lineage tree visualizer with gene expression overlays
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
url = https://github.com/HussainAther/celegans
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = true
install_requires =
    dash>=2.0.0
    dash-cytoscape
    dash-extensions
    networkx
    pandas
    numpy
    matplotlib

[options.entry_points]
console_scripts =
    celegans-lineage = dash_app_launcher:main

